<resources>
    <string name="app_name">LoginAndIntroduce</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_et_name">이름을 입력해주세요.</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_et_id">아이디를 입력해주세요.</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_et_password">비밀번호를 입력해주세요.</string>
    <string name="sign_up_password_again">비밀번호 확인</string>
    <string name="sign_up_et_password_again">비밀번호를 한번 더 입력해주세요.</string>
    <string name="sign_up_btn_signup">회원가입</string>
    <string name="sign_up_btn_close">종료</string>
    <string name="sign_in_id">아이디</string>
    <string name="sign_in_et_id">아이디를 입력해주세요.</string>
    <string name="sign_in_password">비밀번호</string>
    <string name="sign_in_et_password">비밀번호를 입력해주세요.</string>
    <string name="sign_in_btn_login">로그인</string>
    <string name="sign_in_btn_signup">회원가입</string>
    <string name="home_btn_close">종료</string>
</resources>