<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/soori"/>

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_id"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/et_id"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="16"
            android:hint="@string/sign_in_et_id"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="16"
            android:hint="@string/sign_in_et_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_btn_login"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_btn_signup"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>



    

</androidx.constraintlayout.widget.ConstraintLayout>